Navbar collapsing bug

--- a/css/qol_score.css
+++ b/css/qol_score.css
@@ -37,6 +37,10 @@
   /* overflow: visible; */
 }
 
+.navbar-collapse.collapse.in {
+  display: inline-block;
+}
+  
 .icon-bar {
   background-color: black;
   margin-left: 3px;
